# NeuralC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt
neuralc/: main.c  test2.c
neuralc/ai/: activation.c  activation.h  data.h  layer.h  layers.h  model.c  model.h
neuralc/matrix/: matrix.c  matrix.h
neuralc/util/: compiler.h  logger.c  logger.h
test/: twolayer_fivex_onesample.c  twolayer_twosample.c  twolayer_twosample.py
tool/: graphall.py  plotallw.py  split.py
